<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="authentication">Authentication</string>
    <string name="signin_string">Signin</string>
    <string name="signup_string">Signup</string>
    <string name="or_string">or</string>
    <string name="facebook_app_id">1517690985155847</string>
    <string name="signup_email_string">signup with email</string>
    <string name="signin_email_string">signin with email</string>
    <string name="name_signupin_string">Name</string>
    <string name="email_signupin_string">Email</string>
    <string name="password_signupin_string">Password</string>
    <string name="reenter_password_signupin_string">ReEnter</string>
    <string name="name_menu">Name</string>
    <string name="book_category_biography_string">Biography</string>
    <string name="verification_label_string">Verification</string>
    <string name="string_submit">submit</string>
    <string name="string_account_retrival">Please enter your email to reset your password</string>
    <string name="string_label_passwordretrival">Retrival</string>
    <string name="string_signin_textview_forgot">forgot password?</string>
    <string name="string_label_passwordReSubmission">New Password</string>
    <string name="string_label_profile">Profile</string>
    <string name="string_label_uploads">Uploads</string>
    <string name="string_item_logout">logout</string>
    <string name="string_item_library">library</string>
    <string name="string_item_uploads">uploads</string>
    <string name="string_button_upload">upload</string>
    <string name="string_textview_filename">filename</string>
    <string name="string_textview_uploads_history">upload history</string>
    <string name="string_item_friends">friends</string>
    <string name="string_label_search_activity">Search Friends</string>
    <string name="string_label_friends">Friends</string>
    <string name="string_book_title">book title</string>
    <string name="string_no_network">No Network Connection</string>
    <string name="string_reload">reload</string>
    <string name="string_addto_favourites">add to favourites</string>
    <string name="string_profile_picture">profile picture</string>
    <string name="string_name">Name</string>
    <string name="string_email">email</string>
    <string name="string_uploaded">books uploaded</string>
    <string name="string_library">My Library</string>
    <string name="string_test">test response</string>
    <string name="string_happy">Happy</string>
    <string name="string_Reading">Reading</string>
    <string name="string_existing_text">Use an existing account</string>
    <string name="string_title">eLibrary</string>
    <string name="string_readbook">Read this book</string>
    <string name="string_goback">Go back</string>
    <string name="string_coverpic">book cover picture</string>
    <string name="string_popularity">Popularity</string>
    <string name="string_item_reload">reload</string>
    <string-array name="string_books_category">
        <item>biography</item>
    </string-array>

</resources>