<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.elibrary.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/name_account_menu"
        android:showAsAction="ifRoom"
        android:title="@string/name_menu"
        android:visible="true"/>
    <item
        android:id="@+id/settings_logout"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/string_item_logout"/>
    <item
        android:id="@+id/settings_library"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/string_item_library">
    </item>
    <item
        android:id="@+id/settings_uploads"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/string_item_uploads">
    </item>

</menu>