<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_auth_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/signup_button_authentication_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_string" />

    <TextView
        android:id="@+id/or_textview_authentication_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_string" />

    <Button
        android:id="@+id/signin_button_authentication_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_string" />
</LinearLayout>