<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_signupin_string" />

        <EditText
            android:id="@+id/email_edittext_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password_signupin_string" />

        <EditText
            android:id="@+id/password_edittext_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/signup_textview_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_signin_textview_forgot"
        android:textColor="@color/blue" />

    <RelativeLayout
        android:id="@+id/signin_relativelayout_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/signin_button_signin"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/signin_string"
            android:background="@xml/mybutton"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</LinearLayout>